--- a/writeups/amazon experiment result writeup.Rmd
+++ b/writeups/amazon experiment result writeup.Rmd
@@ -117,6 +117,10 @@ df.test_learn$kldiv_test = rowSums(df.test_eval*log(df.test_eval/df.test_learn_e
 df.test_learn$kldiv_baseline = rowSums(df.test_eval*log(df.test_eval/df.test_learn_frequentist), na.rm = TRUE)
 df.test_learn$kldiv_prior = rowSums(df.test_learn_eb*log(df.test_learn_eb/((alphas)/sum(alphas))), na.rm=TRUE)
 
+df.test_learn$diff = df.test_learn$kldiv_test - df.test_learn$kldiv_baseline
+
+plot_3 <- ggplot(df.test_learn, aes(x=n, y=diff)) + geom_hex()
+
 plot_0 <- ggplot(df.test_learn, aes(x=n, y=kldiv_test)) + geom_point()
 plot_1 <- ggplot(df.test_learn, aes(x=n, y=kldiv_baseline)) + geom_point()
 plot_2 <- ggplot(df.test_learn, aes(x=n, y=kldiv_prior)) + geom_point()
@@ -124,6 +128,8 @@ plot_2 <- ggplot(df.test_learn, aes(x=n, y=kldiv_prior)) + geom_point()
 grid.arrange(plot_0, plot_1, ncol=2)
 
 plot_2
+
+plot_3
 ```
 ## Next steps
 
