fixed lfs issue with video games csv

--- a/eb_experiments_1.ipynb
+++ b/eb_experiments_1.ipynb
@@ -175,7 +175,7 @@
    ],
    "source": [
     "# raw_df = read.csv(\"data/Gift_Cards.csv\", header = FALSE, col.names=c(\"item\", \"user\", \"rating\", \"timestamp\"))\n",
-    "# raw_df = read.csv(\"data/Video_Games.csv\", header = FALSE, col.names=c(\"item\", \"user\", \"rating\", \"timestamp\"))\n",
+    "# raw_df = read.csv(\"data/Video_Games_raw.csv\", header = FALSE, col.names=c(\"item\", \"user\", \"rating\", \"timestamp\"))\n",
     "raw_df = read.csv(\"data/Prime_Pantry.csv\", header = FALSE, col.names=c(\"item\", \"user\", \"rating\", \"timestamp\"))\n",
     "head(raw_df)\n",
     "\n",
