--- a/eb_experiments_1.ipynb
+++ b/eb_experiments_1.ipynb
@@ -93,6 +93,8 @@
     }
    ],
    "source": [
+    "# test modification\n",
+    "\n",
     "library(data.table)\n",
     "library(tidyverse)\n",
     "library(distr)"
