added preliminary sede experimentation

--- a/eb_experiments_1.ipynb
+++ b/eb_experiments_1.ipynb
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "c89ca59a",
    "metadata": {},
    "outputs": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7b972347-018f-4553-a630-cd1b330b5fb0",
    "metadata": {},
    "outputs": [],
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "id": "0c515a51-bd74-4c78-a929-c16b8a199759",
    "metadata": {},
    "outputs": [],
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "id": "3d7d98fd-3938-40e7-b2d0-cbcd1e7d6114",
    "metadata": {},
    "outputs": [],
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "id": "612e320c",
    "metadata": {},
    "outputs": [
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "id": "5a5797aa-7fd6-42ad-9de2-ce1a9e2306be",
    "metadata": {},
    "outputs": [
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "id": "510b96cf-5c63-429c-98fd-ace6c4ff8008",
    "metadata": {},
    "outputs": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "id": "b34dab93-a2c0-4026-ac86-38c4d9ea55df",
    "metadata": {},
    "outputs": [
@@ -696,186 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "b20eef9b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li><li>FALSE</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\item FALSE\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. FALSE\n",
-       "2. FALSE\n",
-       "3. FALSE\n",
-       "4. FALSE\n",
-       "5. FALSE\n",
-       "6. FALSE\n",
-       "7. FALSE\n",
-       "8. FALSE\n",
-       "9. FALSE\n",
-       "10. FALSE\n",
-       "11. FALSE\n",
-       "12. FALSE\n",
-       "13. FALSE\n",
-       "14. FALSE\n",
-       "15. FALSE\n",
-       "16. FALSE\n",
-       "17. FALSE\n",
-       "18. FALSE\n",
-       "19. FALSE\n",
-       "20. FALSE\n",
-       "21. FALSE\n",
-       "22. FALSE\n",
-       "23. FALSE\n",
-       "24. FALSE\n",
-       "25. FALSE\n",
-       "26. FALSE\n",
-       "27. FALSE\n",
-       "28. FALSE\n",
-       "29. FALSE\n",
-       "30. FALSE\n",
-       "31. FALSE\n",
-       "32. FALSE\n",
-       "33. FALSE\n",
-       "34. FALSE\n",
-       "35. FALSE\n",
-       "36. FALSE\n",
-       "37. FALSE\n",
-       "38. FALSE\n",
-       "39. FALSE\n",
-       "40. FALSE\n",
-       "41. FALSE\n",
-       "42. FALSE\n",
-       "43. FALSE\n",
-       "44. FALSE\n",
-       "45. FALSE\n",
-       "46. FALSE\n",
-       "47. FALSE\n",
-       "48. FALSE\n",
-       "49. FALSE\n",
-       "50. FALSE\n",
-       "51. FALSE\n",
-       "52. FALSE\n",
-       "53. FALSE\n",
-       "54. FALSE\n",
-       "55. FALSE\n",
-       "56. FALSE\n",
-       "57. FALSE\n",
-       "58. FALSE\n",
-       "59. FALSE\n",
-       "60. FALSE\n",
-       "61. FALSE\n",
-       "62. FALSE\n",
-       "63. FALSE\n",
-       "64. FALSE\n",
-       "65. FALSE\n",
-       "66. FALSE\n",
-       "67. FALSE\n",
-       "68. FALSE\n",
-       "69. FALSE\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       " [1] FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE\n",
-       "[13] FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE\n",
-       "[25] FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE\n",
-       "[37] FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE\n",
-       "[49] FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE\n",
-       "[61] FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE FALSE"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "duplicated(test_subset$item)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "id": "3e64c72d-718d-440b-a7cc-c03fc44f4af2",
    "metadata": {},
    "outputs": [],
@@ -931,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "id": "3e73a070",
    "metadata": {},
    "outputs": [
@@ -1222,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "id": "0511cda5",
    "metadata": {},
    "outputs": [],
@@ -1233,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
    "id": "2ddf0276",
    "metadata": {},
    "outputs": [
@@ -1264,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 18,
    "id": "240d98d9",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "id": "541edfc4",
    "metadata": {},
    "outputs": [
@@ -1578,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 20,
    "id": "d0812852",
    "metadata": {},
    "outputs": [
@@ -1617,17 +1438,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 23,
    "id": "da87ddff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attaching package: ‘DescTools’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:data.table’:\n",
+      "\n",
+      "    %like%\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(DescTools)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 24,
    "id": "ff73808b",
    "metadata": {},
    "outputs": [],
@@ -1640,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 25,
    "id": "f3010a47",
    "metadata": {},
    "outputs": [],
@@ -1650,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 26,
    "id": "eaf636fb",
    "metadata": {},
    "outputs": [
@@ -1685,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 27,
    "id": "11a8b802",
    "metadata": {},
    "outputs": [
@@ -1714,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 28,
    "id": "ecebb998",
    "metadata": {},
    "outputs": [],
@@ -1725,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 29,
    "id": "d03a6870",
    "metadata": {},
    "outputs": [
@@ -1733,41 +1570,76 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        item        avg_learn avg_overall num_train method\n",
-      "1 B00K31JOIU 3.76025089317681        3.99        10     eb\n",
-      "2 B00K31JOIU              3.6        3.99        10   freq\n",
-      "3 B0024MNOGE  3.4188466466968        4.04        10     eb\n",
-      "4 B0024MNOGE              2.7        4.04        10   freq\n",
-      "5 B002RD6MV4 3.68438328284792        3.28        10     eb\n",
-      "6 B002RD6MV4              3.4        3.28        10   freq\n",
-      "        item        avg_learn avg_overall num_train method\n",
-      "1 B00K31JOIU 3.66117665118229        3.99        20     eb\n",
-      "2 B00K31JOIU              3.5        3.99        20   freq\n",
-      "3 B0024MNOGE 3.60617373856168        4.04        20     eb\n",
-      "4 B0024MNOGE              3.4        4.04        20   freq\n",
-      "5 B002RD6MV4  3.6886781074926        3.28        20     eb\n",
-      "6 B002RD6MV4             3.55        3.28        20   freq\n",
-      "        item        avg_learn avg_overall num_train method\n",
-      "1 B00K31JOIU 3.66955066244638        3.99        30     eb\n",
-      "2 B00K31JOIU 3.56666666666667        3.99        30   freq\n",
-      "3 B0024MNOGE 3.79896780216928        4.04        30     eb\n",
-      "4 B0024MNOGE 3.76666666666667        4.04        30   freq\n",
-      "5 B002RD6MV4 3.62641161587208        3.28        30     eb\n",
-      "6 B002RD6MV4              3.5        3.28        30   freq\n",
-      "        item        avg_learn avg_overall num_train method\n",
-      "1 B00K31JOIU 3.55075535738088        3.99        40     eb\n",
-      "2 B00K31JOIU            3.425        3.99        40   freq\n",
-      "3 B0024MNOGE  3.9056061901213        4.04        40     eb\n",
-      "4 B0024MNOGE            3.925        4.04        40   freq\n",
-      "5 B002RD6MV4 3.62172552392896        3.28        40     eb\n",
-      "6 B002RD6MV4            3.525        3.28        40   freq\n",
-      "        item        avg_learn avg_overall num_train method\n",
-      "1 B00K31JOIU 3.54310706790868        3.99        50     eb\n",
-      "2 B00K31JOIU             3.44        3.99        50   freq\n",
-      "3 B0024MNOGE 3.91983032762304        4.04        50     eb\n",
-      "4 B0024MNOGE             3.94        4.04        50   freq\n",
-      "5 B002RD6MV4 3.61845171985156        3.28        50     eb\n",
-      "6 B002RD6MV4             3.54        3.28        50   freq\n"
+      "        item        avg_learn avg_overall num_train method rank_learn\n",
+      "1 B00K31JOIU 3.76025089317681        3.99        10     eb         28\n",
+      "2 B00K31JOIU              3.6        3.99        10   freq         34\n",
+      "3 B0024MNOGE  3.4188466466968        4.04        10     eb         40\n",
+      "4 B0024MNOGE              2.7        4.04        10   freq         54\n",
+      "5 B002RD6MV4 3.68438328284792        3.28        10     eb         31\n",
+      "6 B002RD6MV4              3.4        3.28        10   freq         41\n",
+      "  rank_overall\n",
+      "1           66\n",
+      "2           66\n",
+      "3           63\n",
+      "4           63\n",
+      "5          101\n",
+      "6          101\n",
+      "        item        avg_learn avg_overall num_train method rank_learn\n",
+      "1 B00K31JOIU 3.66117665118229        3.99        20     eb         58\n",
+      "2 B00K31JOIU              3.5        3.99        20   freq         67\n",
+      "3 B0024MNOGE 3.60617373856168        4.04        20     eb         61\n",
+      "4 B0024MNOGE              3.4        4.04        20   freq         73\n",
+      "5 B002RD6MV4  3.6886781074926        3.28        20     eb         57\n",
+      "6 B002RD6MV4             3.55        3.28        20   freq         65\n",
+      "  rank_overall\n",
+      "1           66\n",
+      "2           66\n",
+      "3           63\n",
+      "4           63\n",
+      "5          101\n",
+      "6          101\n",
+      "        item        avg_learn avg_overall num_train method rank_learn\n",
+      "1 B00K31JOIU 3.66955066244638        3.99        30     eb         72\n",
+      "2 B00K31JOIU 3.56666666666667        3.99        30   freq         78\n",
+      "3 B0024MNOGE 3.79896780216928        4.04        30     eb         63\n",
+      "4 B0024MNOGE 3.76666666666667        4.04        30   freq         65\n",
+      "5 B002RD6MV4 3.62641161587208        3.28        30     eb         76\n",
+      "6 B002RD6MV4              3.5        3.28        30   freq         83\n",
+      "  rank_overall\n",
+      "1           66\n",
+      "2           66\n",
+      "3           63\n",
+      "4           63\n",
+      "5          101\n",
+      "6          101\n",
+      "        item        avg_learn avg_overall num_train method rank_learn\n",
+      "1 B00K31JOIU 3.55075535738088        3.99        40     eb        102\n",
+      "2 B00K31JOIU            3.425        3.99        40   freq        109\n",
+      "3 B0024MNOGE  3.9056061901213        4.04        40     eb         77\n",
+      "4 B0024MNOGE            3.925        4.04        40   freq         75\n",
+      "5 B002RD6MV4 3.62172552392896        3.28        40     eb         98\n",
+      "6 B002RD6MV4            3.525        3.28        40   freq        104\n",
+      "  rank_overall\n",
+      "1           66\n",
+      "2           66\n",
+      "3           63\n",
+      "4           63\n",
+      "5          101\n",
+      "6          101\n",
+      "        item        avg_learn avg_overall num_train method rank_learn\n",
+      "1 B00K31JOIU 3.54310706790868        3.99        50     eb        121\n",
+      "2 B00K31JOIU             3.44        3.99        50   freq        127\n",
+      "3 B0024MNOGE 3.91983032762304        4.04        50     eb         87\n",
+      "4 B0024MNOGE             3.94        4.04        50   freq         84\n",
+      "5 B002RD6MV4 3.61845171985156        3.28        50     eb        117\n",
+      "6 B002RD6MV4             3.54        3.28        50   freq        122\n",
+      "  rank_overall\n",
+      "1           66\n",
+      "2           66\n",
+      "3           63\n",
+      "4           63\n",
+      "5          101\n",
+      "6          101\n"
      ]
     }
    ],
@@ -1816,9 +1688,11 @@
     "      results_df <- rbind(results_df, to_add)\n",
     "      \n",
     "  }\n",
+    "    \n",
     "  colnames(results_df) <- c('item', 'avg_learn', 'avg_overall', 'num_train', 'method')\n",
+    "  print_df <- mutate(results_df, rank_learn = dense_rank(desc(avg_learn)), rank_overall = dense_rank(desc(avg_overall)))\n",
     "  \n",
-    "  print(head(results_df))\n",
+    "  print(head(print_df))\n",
     "  \n",
     "  for (m in unique(results_df$method)) {\n",
     "      temp_df <- filter(results_df, method==m)\n",
